--- a/.res/pandacoind.service
+++ b/.res/pandacoind.service
@@ -26,9 +26,9 @@ After=network.target
 [Service]
 Type=forking
 PIDFile=/pandacoin/data/pandacoind.pid
-ExecStart=/pandacoin/daemon/pandacoind -daemon -datadir=/pandacoin/data/ -pid=pandacoind.pid -conf=pandacoin.conf
+ExecStart=/pandacoin/daemon/pandacoind -daemon -staking=0 -datadir=/pandacoin/data/ -pid=pandacoind.pid -conf=pandacoin.conf
 ExecStop=/pandacoin/daemon/pandacoind stop
-ExecReload=/pandacoin/daemon/pandacoind stop ; sleep 60 ; /pandacoin/daemon/pandacoind -daemon -datadir=/pandacoin/data/ -pid=pandacoind.pid -conf=pandacoin.conf
+ExecReload=/pandacoin/daemon/pandacoind stop ; sleep 60 ; /pandacoin/daemon/pandacoind -daemon -staking=0 -datadir=/pandacoin/data/ -pid=pandacoind.pid -conf=pandacoin.conf
 RestartSec=300
 WorkingDirectory=/pandacoin/data/
 Restart=always
